# TurboJpeg-Android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: compress.c  compress.h
app/src/main/java/com/march/turbojpeg/: MainActivity.java  TurboJpegUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/march/turbojpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
source/libs/armeabi/: cjpeg  djpeg  jpegtran  rdjpgcom  tjbench  tjunittest  wrjpgcom
source/libs/armeabi-v7a/: cjpeg  djpeg  jpegtran  rdjpgcom  tjbench  tjunittest  wrjpgcom
